--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-plumber": "^1.0.1",
     "gulp-ruby-sass": "^2.0.6",
     "gulp-watch": "^4.3.5"
